feat: implement real authentication, standardize logout, and fix build errors

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "QR Absen",
-  "name": "QR Absence System",
+  "name": "Presensi Pembelajaran Digital",
+  "short_name": "Presensi",
   "icons": [
     {
       "src": "vite.svg",
