--- a/deskta/package.json
+++ b/deskta/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "electron/main.js",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "electron:dev": "concurrently -k \"npm run dev\" \"cross-env NODE_ENV=development wait-on http://localhost:5174 && electron .\"",
-    "electron:build": "npm run build && electron-builder"
+    "electron:dev": "vite",
+    "electron:build": "tsc -b && vite build && electron-builder"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
@@ -43,6 +43,8 @@
     "baseline-browser-mapping": "^2.9.18",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
@@ -51,6 +53,26 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "wait-on": "^9.0.3"
+  },
+  "build": {
+    "appId": "com.example.absensikelas",
+    "productName": "Absensi Kelas",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*"
+    ],
+    "linux": {
+      "target": "AppImage",
+      "category": "Education"
+    },
+    "win": {
+      "target": "nsis"
+    }
   }
 }
